--- a/style.css
+++ b/style.css
@@ -3,11 +3,15 @@ body {
     margin: 0;
     padding: 0;
     height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 #container {
     width: 100%;
     height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -15,4 +19,11 @@ body {
 #game {
     border: 5px solid yellow;
     margin: auto;
+}
+
+#prompt {
+    width: 720px;
+    border: 5px solid yellow;
+    background-color: lime;
+    height: 10%;
 }
