--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: "Underdog", sans-serif;
 }
 #container {
     width: 100%;
@@ -26,4 +27,17 @@ body {
     border: 5px solid yellow;
     background-color: lime;
     height: 10%;
+    text-align: center;
+    align-content: center;
+}
+
+@font-face {
+    font-family: "Underdog";
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url("assets/Underdog/Underdog-Regular.ttf") format("truetype");
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6,
+        U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122,
+        U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
